testing spacy supervised ML

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -188,6 +188,302 @@
    "source": [
     "!python bitcoin.py"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "[E002] Can't find factory for 'sentiment' for language English (en). This usually happens when spaCy calls `nlp.create_pipe` with a custom component name that's not registered on the current language class. If you're using a Transformer, make sure to install 'spacy-transformers'. If you're using a custom component, make sure you've added the decorator `@Language.component` (for function components) or `@Language.factory` (for class components).\n\nAvailable factories: attribute_ruler, tok2vec, merge_noun_chunks, merge_entities, merge_subtokens, token_splitter, doc_cleaner, parser, beam_parser, lemmatizer, trainable_lemmatizer, entity_linker, entity_ruler, tagger, morphologizer, ner, beam_ner, senter, sentencizer, spancat, spancat_singlelabel, span_finder, future_entity_ruler, span_ruler, textcat, textcat_multilabel, en.lemmatizer",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\user\\OneDrive\\Documents\\SE_Factory\\FSD\\Tech\\data_analysis_saturn_group\\notebook.ipynb Cell 4\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/user/OneDrive/Documents/SE_Factory/FSD/Tech/data_analysis_saturn_group/notebook.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mspacy\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/user/OneDrive/Documents/SE_Factory/FSD/Tech/data_analysis_saturn_group/notebook.ipynb#W3sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m nlp \u001b[39m=\u001b[39m spacy\u001b[39m.\u001b[39mload(\u001b[39m\"\u001b[39m\u001b[39men_core_web_sm\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/user/OneDrive/Documents/SE_Factory/FSD/Tech/data_analysis_saturn_group/notebook.ipynb#W3sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m nlp\u001b[39m.\u001b[39;49madd_pipe(\u001b[39m\"\u001b[39;49m\u001b[39msentiment\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/user/OneDrive/Documents/SE_Factory/FSD/Tech/data_analysis_saturn_group/notebook.ipynb#W3sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39manalyze_sentiment\u001b[39m(text):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/user/OneDrive/Documents/SE_Factory/FSD/Tech/data_analysis_saturn_group/notebook.ipynb#W3sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m   doc \u001b[39m=\u001b[39m nlp(text)\n",
+      "File \u001b[1;32mc:\\Users\\user\\anaconda3\\envs\\sefactory_env\\lib\\site-packages\\spacy\\language.py:814\u001b[0m, in \u001b[0;36mLanguage.add_pipe\u001b[1;34m(self, factory_name, name, before, after, first, last, source, config, raw_config, validate)\u001b[0m\n\u001b[0;32m    810\u001b[0m     pipe_component, factory_name \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcreate_pipe_from_source(\n\u001b[0;32m    811\u001b[0m         factory_name, source, name\u001b[39m=\u001b[39mname\n\u001b[0;32m    812\u001b[0m     )\n\u001b[0;32m    813\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 814\u001b[0m     pipe_component \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcreate_pipe(\n\u001b[0;32m    815\u001b[0m         factory_name,\n\u001b[0;32m    816\u001b[0m         name\u001b[39m=\u001b[39;49mname,\n\u001b[0;32m    817\u001b[0m         config\u001b[39m=\u001b[39;49mconfig,\n\u001b[0;32m    818\u001b[0m         raw_config\u001b[39m=\u001b[39;49mraw_config,\n\u001b[0;32m    819\u001b[0m         validate\u001b[39m=\u001b[39;49mvalidate,\n\u001b[0;32m    820\u001b[0m     )\n\u001b[0;32m    821\u001b[0m pipe_index \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_get_pipe_index(before, after, first, last)\n\u001b[0;32m    822\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_pipe_meta[name] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mget_factory_meta(factory_name)\n",
+      "File \u001b[1;32mc:\\Users\\user\\anaconda3\\envs\\sefactory_env\\lib\\site-packages\\spacy\\language.py:683\u001b[0m, in \u001b[0;36mLanguage.create_pipe\u001b[1;34m(self, factory_name, name, config, raw_config, validate)\u001b[0m\n\u001b[0;32m    675\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhas_factory(factory_name):\n\u001b[0;32m    676\u001b[0m     err \u001b[39m=\u001b[39m Errors\u001b[39m.\u001b[39mE002\u001b[39m.\u001b[39mformat(\n\u001b[0;32m    677\u001b[0m         name\u001b[39m=\u001b[39mfactory_name,\n\u001b[0;32m    678\u001b[0m         opts\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m, \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfactory_names),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    681\u001b[0m         lang_code\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mlang,\n\u001b[0;32m    682\u001b[0m     )\n\u001b[1;32m--> 683\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(err)\n\u001b[0;32m    684\u001b[0m pipe_meta \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mget_factory_meta(factory_name)\n\u001b[0;32m    685\u001b[0m \u001b[39m# This is unideal, but the alternative would mean you always need to\u001b[39;00m\n\u001b[0;32m    686\u001b[0m \u001b[39m# specify the full config settings, which is not really viable.\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: [E002] Can't find factory for 'sentiment' for language English (en). This usually happens when spaCy calls `nlp.create_pipe` with a custom component name that's not registered on the current language class. If you're using a Transformer, make sure to install 'spacy-transformers'. If you're using a custom component, make sure you've added the decorator `@Language.component` (for function components) or `@Language.factory` (for class components).\n\nAvailable factories: attribute_ruler, tok2vec, merge_noun_chunks, merge_entities, merge_subtokens, token_splitter, doc_cleaner, parser, beam_parser, lemmatizer, trainable_lemmatizer, entity_linker, entity_ruler, tagger, morphologizer, ner, beam_ner, senter, sentencizer, spancat, spancat_singlelabel, span_finder, future_entity_ruler, span_ruler, textcat, textcat_multilabel, en.lemmatizer"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "\n",
+    "\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "nlp.add_pipe(\"sentiment\")\n",
+    "def analyze_sentiment(text):\n",
+    "  \n",
+    "  doc = nlp(text)\n",
+    "  sentiment_scores = doc._.sentiment\n",
+    "  compound_score = sentiment_scores[\"compound\"]\n",
+    "\n",
+    "  if compound_score >= 0.05:\n",
+    "    sentiment = \"positive\"\n",
+    "  elif compound_score <= -0.05:\n",
+    "    sentiment = \"negative\"\n",
+    "  else:\n",
+    "    sentiment = \"neutral\"\n",
+    "\n",
+    "  return sentiment, compound_score\n",
+    "\n",
+    "texts = [\n",
+    "  \"I love this product! It's amazing.\",\n",
+    "  \"This movie is terrible.\",\n",
+    "  \"The weather today is okay.\"\n",
+    "]\n",
+    "\n",
+    "for text in texts:\n",
+    "  sentiment, compound_score = analyze_sentiment(text)\n",
+    "  print(f\"Text: {text}\")\n",
+    "  print(f\"Sentiment: {sentiment} (Compound Score: {compound_score})\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForSequenceClassification: ['cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.bias', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.weight']\n",
+      "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'label': 'LABEL_0', 'score': 0.7167999148368835}]\n",
+      "Sentiment Label: LABEL_0\n",
+      "Sentiment Score: 0.7167999148368835\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "from transformers import pipeline\n",
+    "\n",
+    "# Load spaCy\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "# Load a pre-trained transformer model for sentiment analysis (e.g., BERT)\n",
+    "sentiment_analysis = pipeline(\"sentiment-analysis\", model=\"bert-base-uncased\")\n",
+    "\n",
+    "\n",
+    "# Example text\n",
+    "text = \"The weather today is okay.\"\n",
+    "\n",
+    "# Tokenize the text using spaCy\n",
+    "doc = nlp(text)\n",
+    "\n",
+    "# Convert spaCy tokens back to a text string\n",
+    "tokenized_text = \" \".join([token.text for token in doc])\n",
+    "\n",
+    "\n",
+    "# Perform sentiment analysis using the transformer model\n",
+    "sentiment_results = sentiment_analysis(tokenized_text)\n",
+    "\n",
+    "# Extract the sentiment label and score\n",
+    "sentiment_label = sentiment_results[0][\"label\"]\n",
+    "sentiment_score = sentiment_results[0][\"score\"]\n",
+    "\n",
+    "print(sentiment_results)\n",
+    "print(f\"Sentiment Label: {sentiment_label}\")\n",
+    "print(f\"Sentiment Score: {sentiment_score}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertForSequenceClassification: ['cls.predictions.transform.dense.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.bias', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.weight', 'cls.seq_relationship.weight']\n",
+      "- This IS expected if you are initializing BertForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-uncased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Text: I love this product! It's amazing.\n",
+      "Sentiment: LABEL_1 (Compound Score: 0.6537538170814514)\n",
+      "Text: This movie is terrible.\n",
+      "Sentiment: LABEL_1 (Compound Score: 0.6499747037887573)\n",
+      "Text: The weather today is okay.\n",
+      "Sentiment: LABEL_1 (Compound Score: 0.6475648880004883)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "\n",
+    "\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "sentiment_analysis = pipeline(\"sentiment-analysis\", model=\"bert-base-uncased\")\n",
+    "\n",
+    "def analyze_sentiment(text):\n",
+    "  \n",
+    "  doc = nlp(text)\n",
+    "  tokenized_text = \" \".join([token.text for token in doc])\n",
+    "  sentiment_results = sentiment_analysis(tokenized_text)\n",
+    "  # sentiment_scores = doc._.sentiment\n",
+    "  sentiment_label = sentiment_results[0][\"label\"]\n",
+    "  sentiment_score = sentiment_results[0][\"score\"]\n",
+    "\n",
+    "  # compound_score = sentiment_scores[\"compound\"]\n",
+    "\n",
+    "  # if compound_score >= 0.05:\n",
+    "  #   sentiment = \"positive\"\n",
+    "  # elif compound_score <= -0.05:\n",
+    "  #   sentiment = \"negative\"\n",
+    "  # else:\n",
+    "  #   sentiment = \"neutral\"\n",
+    "\n",
+    "  return sentiment_label, sentiment_score\n",
+    "\n",
+    "texts = [\n",
+    "  \"I love this product! It's amazing.\",\n",
+    "  \"This movie is terrible.\",\n",
+    "  \"The weather today is okay.\"\n",
+    "]\n",
+    "\n",
+    "for text in texts:\n",
+    "  # sentiment, compound_score = analyze_sentiment(text)\n",
+    "  sentiment, compound_score = analyze_sentiment(text)\n",
+    "\n",
+    "  print(f\"Text: {text}\")\n",
+    "  print(f\"Sentiment: {sentiment} (Compound Score: {compound_score})\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of GPT2ForSequenceClassification were not initialized from the model checkpoint at gpt2 and are newly initialized: ['score.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'label': 'LABEL_1', 'score': 0.9932832717895508}]\n",
+      "Sentiment Label: LABEL_1\n",
+      "Sentiment Score: 0.9932832717895508\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "from transformers import pipeline\n",
+    "\n",
+    "# Load spaCy\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "# Load a pre-trained transformer model for sentiment analysis (e.g., GPT2)\n",
+    "sentiment_analysis = pipeline(\"sentiment-analysis\", model=\"gpt2\")\n",
+    "\n",
+    "\n",
+    "# Example text\n",
+    "text = \"This movie is terrible.\"\n",
+    "\n",
+    "# Tokenize the text using spaCy\n",
+    "doc = nlp(text)\n",
+    "\n",
+    "# Convert spaCy tokens back to a text string\n",
+    "tokenized_text = \" \".join([token.text for token in doc])\n",
+    "\n",
+    "\n",
+    "# Perform sentiment analysis using the transformer model\n",
+    "sentiment_results = sentiment_analysis(tokenized_text)\n",
+    "\n",
+    "# Extract the sentiment label and score\n",
+    "sentiment_label = sentiment_results[0][\"label\"]\n",
+    "sentiment_score = sentiment_results[0][\"score\"]\n",
+    "\n",
+    "print(sentiment_results)\n",
+    "print(f\"Sentiment Label: {sentiment_label}\")\n",
+    "print(f\"Sentiment Score: {sentiment_score}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading (…)neration_config.json: 100%|██████████| 124/124 [00:00<?, ?B/s] \n",
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
+      "c:\\Users\\user\\anaconda3\\envs\\sefactory_env\\lib\\site-packages\\transformers\\generation\\utils.py:1353: UserWarning: Using `max_length`'s default (50) to control the generation length. This behaviour is deprecated and will be removed from the config in v5 of Transformers -- we recommend using `max_new_tokens` to control the maximum length of the generation.\n",
+      "  warnings.warn(\n",
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sentiment: Negative\n"
+     ]
+    }
+   ],
+   "source": [
+    "text_generator = pipeline(\"text-generation\", model=\"gpt2\")\n",
+    "\n",
+    "def analyze_sentiment_with_gpt2(text):\n",
+    "    # Define prompts for different sentiments\n",
+    "    positive_prompt = \"This movie is wonderful\"\n",
+    "    negative_prompt = \"This movie is terrible\"\n",
+    "\n",
+    "    # Generate text with GPT-2 based on input text\n",
+    "    generated_text_positive = text_generator(positive_prompt + text)[0][\"generated_text\"]\n",
+    "    generated_text_negative = text_generator(negative_prompt + text)[0][\"generated_text\"]\n",
+    "\n",
+    "    # Analyze the generated text to infer sentiment\n",
+    "    positive_score = analyze_sentiment(generated_text_positive)\n",
+    "    negative_score = analyze_sentiment(generated_text_negative)\n",
+    "\n",
+    "    # Determine overall sentiment based on the scores\n",
+    "    if positive_score > negative_score:\n",
+    "        sentiment = \"Positive\"\n",
+    "    elif positive_score < negative_score:\n",
+    "        sentiment = \"Negative\"\n",
+    "    else:\n",
+    "        sentiment = \"Neutral\"\n",
+    "\n",
+    "    return sentiment\n",
+    "\n",
+    "# Example text\n",
+    "text = \"I really enjoyed the movie. It was fantastic!\"\n",
+    "\n",
+    "# Analyze sentiment using GPT-2\n",
+    "sentiment = analyze_sentiment_with_gpt2(text)\n",
+    "print(f\"Sentiment: {sentiment}\")\n"
+   ]
   }
  ],
  "metadata": {
