PQpZ3h0w: implement, test, run prehook

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -484,6 +484,296 @@
     "sentiment = analyze_sentiment_with_gpt2(text)\n",
     "print(f\"Sentiment: {sentiment}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "column is not a date format=Parser must be a string or character stream, not float64\n",
+      "column is not a date format=Unknown string format: @PPathole Dojo isnât needed, but will make self-driving better. It isnât enough to be safer than human drivers, Autopilot ultimately needs to be more than 10 times safer than human drivers. present at position 0\n",
+      "column is not a date format=Parser must be a string or character stream, not int64\n",
+      "column is not a date format=String does not contain a date: Aave\n",
+      "column is not a date format=String does not contain a date: AAVE\n",
+      "column is not a date format=Parser must be a string or character stream, not float64\n",
+      "column is not a date format=Parser must be a string or character stream, not float64\n",
+      "column is not a date format=Parser must be a string or character stream, not float64\n",
+      "column is not a date format=Parser must be a string or character stream, not float64\n",
+      "column is not a date format=Parser must be a string or character stream, not float64\n",
+      "column is not a date format=Parser must be a string or character stream, not float64\n",
+      "column is not a date format=Parser must be a string or character stream, not int64\n",
+      "column is not a date format=String does not contain a date: Binance Coin\n",
+      "column is not a date format=String does not contain a date: BNB\n",
+      "column is not a date format=Parser must be a string or character stream, not float64\n",
+      "column is not a date format=Parser must be a string or character stream, not float64\n",
+      "column is not a date format=Parser must be a string or character stream, not float64\n",
+      "column is not a date format=Parser must be a string or character stream, not float64\n",
+      "column is not a date format=Parser must be a string or character stream, not float64\n",
+      "column is not a date format=Parser must be a string or character stream, not float64\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Datetime</th>\n",
+       "      <th>Text</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Tweet Id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1.344810e+18</th>\n",
+       "      <td>2021-01-01 00:58:00</td>\n",
+       "      <td>@PPathole Dojo isnât needed, but will make s...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.345210e+18</th>\n",
+       "      <td>2021-02-01 03:20:00</td>\n",
+       "      <td>@comma_ai Tesla Full Self-Driving will work at...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.345340e+18</th>\n",
+       "      <td>2021-02-01 12:23:00</td>\n",
+       "      <td>@newscientist Um, we have giant fusion reactor...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.345380e+18</th>\n",
+       "      <td>2021-02-01 14:51:00</td>\n",
+       "      <td>So proud of the Tesla team for achieving this ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.345380e+18</th>\n",
+       "      <td>2021-02-01 14:59:00</td>\n",
+       "      <td>@flcnhvy Tesla is responsible for 2/3 of all t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.476620e+18</th>\n",
+       "      <td>2021-12-30 18:23:00</td>\n",
+       "      <td>@BLKMDL3 @mims Predicting macroeconomics is ch...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.476650e+18</th>\n",
+       "      <td>2021-12-30 20:28:00</td>\n",
+       "      <td>@CSmithson80 @heydave7 @BLKMDL3 @mims This cha...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.476660e+18</th>\n",
+       "      <td>2021-12-30 20:47:00</td>\n",
+       "      <td>@tesla_raj Many UI improvements coming</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.476660e+18</th>\n",
+       "      <td>2021-12-30 21:11:00</td>\n",
+       "      <td>@roshanpateI ð¤£ $7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1.476740e+18</th>\n",
+       "      <td>2021-12-31 02:23:00</td>\n",
+       "      <td>@TheBabylonBee ð¤£</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2993 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Datetime  \\\n",
+       "Tweet Id                           \n",
+       "1.344810e+18 2021-01-01 00:58:00   \n",
+       "1.345210e+18 2021-02-01 03:20:00   \n",
+       "1.345340e+18 2021-02-01 12:23:00   \n",
+       "1.345380e+18 2021-02-01 14:51:00   \n",
+       "1.345380e+18 2021-02-01 14:59:00   \n",
+       "...                          ...   \n",
+       "1.476620e+18 2021-12-30 18:23:00   \n",
+       "1.476650e+18 2021-12-30 20:28:00   \n",
+       "1.476660e+18 2021-12-30 20:47:00   \n",
+       "1.476660e+18 2021-12-30 21:11:00   \n",
+       "1.476740e+18 2021-12-31 02:23:00   \n",
+       "\n",
+       "                                                           Text  \n",
+       "Tweet Id                                                         \n",
+       "1.344810e+18  @PPathole Dojo isnât needed, but will make s...  \n",
+       "1.345210e+18  @comma_ai Tesla Full Self-Driving will work at...  \n",
+       "1.345340e+18  @newscientist Um, we have giant fusion reactor...  \n",
+       "1.345380e+18  So proud of the Tesla team for achieving this ...  \n",
+       "1.345380e+18  @flcnhvy Tesla is responsible for 2/3 of all t...  \n",
+       "...                                                         ...  \n",
+       "1.476620e+18  @BLKMDL3 @mims Predicting macroeconomics is ch...  \n",
+       "1.476650e+18  @CSmithson80 @heydave7 @BLKMDL3 @mims This cha...  \n",
+       "1.476660e+18             @tesla_raj Many UI improvements coming  \n",
+       "1.476660e+18                               @roshanpateI ð¤£ $7  \n",
+       "1.476740e+18                                @TheBabylonBee ð¤£  \n",
+       "\n",
+       "[2993 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from lookups import CsvUrlTweets,CsvUrlHistoricalData\n",
+    "from pandas_data_handler import get_online_csv_into_df_list\n",
+    "\n",
+    "df_list,df_titles = get_online_csv_into_df_list(CsvUrlTweets,CsvUrlHistoricalData)\n",
+    "df_list[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Symbol</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Marketcap</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SNo</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Aave</td>\n",
+       "      <td>AAVE</td>\n",
+       "      <td>2020-10-05 23:59:59</td>\n",
+       "      <td>55.112358</td>\n",
+       "      <td>49.7879</td>\n",
+       "      <td>52.675035</td>\n",
+       "      <td>53.219243</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.912813e+07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Name Symbol                Date       High      Low       Open  \\\n",
+       "SNo                                                                   \n",
+       "1    Aave   AAVE 2020-10-05 23:59:59  55.112358  49.7879  52.675035   \n",
+       "\n",
+       "         Close  Volume     Marketcap  \n",
+       "SNo                                   \n",
+       "1    53.219243     0.0  8.912813e+07  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_list[1].iloc[0:1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "column is not a date format=Parser must be a string or character stream, not float64\n",
+      "column is not a date format=Unknown string format: @PPathole Dojo isnât needed, but will make self-driving better. It isnât enough to be safer than human drivers, Autopilot ultimately needs to be more than 10 times safer than human drivers. present at position 0\n",
+      "column is not a date format=Parser must be a string or character stream, not int64\n",
+      "column is not a date format=String does not contain a date: Aave\n",
+      "column is not a date format=String does not contain a date: AAVE\n",
+      "column is not a date format=Parser must be a string or character stream, not float64\n",
+      "column is not a date format=Parser must be a string or character stream, not float64\n",
+      "column is not a date format=Parser must be a string or character stream, not float64\n",
+      "column is not a date format=Parser must be a string or character stream, not float64\n",
+      "column is not a date format=Parser must be a string or character stream, not float64\n",
+      "column is not a date format=Parser must be a string or character stream, not float64\n",
+      "column is not a date format=Parser must be a string or character stream, not int64\n",
+      "column is not a date format=String does not contain a date: Binance Coin\n",
+      "column is not a date format=String does not contain a date: BNB\n",
+      "column is not a date format=Parser must be a string or character stream, not float64\n",
+      "column is not a date format=Parser must be a string or character stream, not float64\n",
+      "column is not a date format=Parser must be a string or character stream, not float64\n",
+      "column is not a date format=Parser must be a string or character stream, not float64\n",
+      "column is not a date format=Parser must be a string or character stream, not float64\n",
+      "column is not a date format=Parser must be a string or character stream, not float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "from prehook import execute_prehook\n",
+    "\n",
+    "execute_prehook()"
+   ]
   }
  ],
  "metadata": {
