--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -487,161 +487,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "column is not a date format=Parser must be a string or character stream, not float64\n",
-      "column is not a date format=Unknown string format: @PPathole Dojo isnât needed, but will make self-driving better. It isnât enough to be safer than human drivers, Autopilot ultimately needs to be more than 10 times safer than human drivers. present at position 0\n",
-      "column is not a date format=Parser must be a string or character stream, not int64\n",
-      "column is not a date format=String does not contain a date: Aave\n",
-      "column is not a date format=String does not contain a date: AAVE\n",
-      "column is not a date format=Parser must be a string or character stream, not float64\n",
-      "column is not a date format=Parser must be a string or character stream, not float64\n",
-      "column is not a date format=Parser must be a string or character stream, not float64\n",
-      "column is not a date format=Parser must be a string or character stream, not float64\n",
-      "column is not a date format=Parser must be a string or character stream, not float64\n",
-      "column is not a date format=Parser must be a string or character stream, not float64\n",
-      "column is not a date format=Parser must be a string or character stream, not int64\n",
-      "column is not a date format=String does not contain a date: Binance Coin\n",
-      "column is not a date format=String does not contain a date: BNB\n",
-      "column is not a date format=Parser must be a string or character stream, not float64\n",
-      "column is not a date format=Parser must be a string or character stream, not float64\n",
-      "column is not a date format=Parser must be a string or character stream, not float64\n",
-      "column is not a date format=Parser must be a string or character stream, not float64\n",
-      "column is not a date format=Parser must be a string or character stream, not float64\n",
-      "column is not a date format=Parser must be a string or character stream, not float64\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'database_handler'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\user\\OneDrive\\Documents\\SE_Factory\\FSD\\Tech\\data_analysis_saturn_group\\notebook.ipynb Cell 9\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/user/OneDrive/Documents/SE_Factory/FSD/Tech/data_analysis_saturn_group/notebook.ipynb#X11sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mlookups\u001b[39;00m \u001b[39mimport\u001b[39;00m CsvUrlTweets,CsvUrlHistoricalData\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/user/OneDrive/Documents/SE_Factory/FSD/Tech/data_analysis_saturn_group/notebook.ipynb#X11sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpandas_data_handler\u001b[39;00m \u001b[39mimport\u001b[39;00m get_online_csv_into_df_list\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/user/OneDrive/Documents/SE_Factory/FSD/Tech/data_analysis_saturn_group/notebook.ipynb#X11sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m df_list,df_titles \u001b[39m=\u001b[39m get_online_csv_into_df_list(CsvUrlTweets,CsvUrlHistoricalData)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/user/OneDrive/Documents/SE_Factory/FSD/Tech/data_analysis_saturn_group/notebook.ipynb#X11sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m df_list[\u001b[39m0\u001b[39m]\n",
+      "File \u001b[1;32mc:\\Users\\user\\OneDrive\\Documents\\SE_Factory\\FSD\\Tech\\data_analysis_saturn_group\\pandas_data_handler.py:12\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mlookups\u001b[39;00m \u001b[39mimport\u001b[39;00m InputTypes, PandasFunctions \u001b[39mas\u001b[39;00m pf, ErrorHandling\n\u001b[0;32m     11\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mlogging_handler\u001b[39;00m \u001b[39mimport\u001b[39;00m show_error_message\n\u001b[1;32m---> 12\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mdatabase_handler\u001b[39;00m \u001b[39mimport\u001b[39;00m return_data_as_df\n\u001b[0;32m     15\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mreturn_create_statement_from_df\u001b[39m(dataframe, schema_name, table_name):\n\u001b[0;32m     16\u001b[0m     type_mapping \u001b[39m=\u001b[39m {\n\u001b[0;32m     17\u001b[0m         \u001b[39m'\u001b[39m\u001b[39mint64\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m'\u001b[39m\u001b[39mINT\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m     18\u001b[0m         \u001b[39m'\u001b[39m\u001b[39mfloat64\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m'\u001b[39m\u001b[39mFLOAT\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     21\u001b[0m         \u001b[39m'\u001b[39m\u001b[39mobject\u001b[39m\u001b[39m'\u001b[39m: \u001b[39m'\u001b[39m\u001b[39mTEXT\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     22\u001b[0m     }\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'database_handler'"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Datetime</th>\n",
-       "      <th>Text</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Tweet Id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1.344810e+18</th>\n",
-       "      <td>2021-01-01 00:58:00</td>\n",
-       "      <td>@PPathole Dojo isnât needed, but will make s...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1.345210e+18</th>\n",
-       "      <td>2021-02-01 03:20:00</td>\n",
-       "      <td>@comma_ai Tesla Full Self-Driving will work at...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1.345340e+18</th>\n",
-       "      <td>2021-02-01 12:23:00</td>\n",
-       "      <td>@newscientist Um, we have giant fusion reactor...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1.345380e+18</th>\n",
-       "      <td>2021-02-01 14:51:00</td>\n",
-       "      <td>So proud of the Tesla team for achieving this ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1.345380e+18</th>\n",
-       "      <td>2021-02-01 14:59:00</td>\n",
-       "      <td>@flcnhvy Tesla is responsible for 2/3 of all t...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1.476620e+18</th>\n",
-       "      <td>2021-12-30 18:23:00</td>\n",
-       "      <td>@BLKMDL3 @mims Predicting macroeconomics is ch...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1.476650e+18</th>\n",
-       "      <td>2021-12-30 20:28:00</td>\n",
-       "      <td>@CSmithson80 @heydave7 @BLKMDL3 @mims This cha...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1.476660e+18</th>\n",
-       "      <td>2021-12-30 20:47:00</td>\n",
-       "      <td>@tesla_raj Many UI improvements coming</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1.476660e+18</th>\n",
-       "      <td>2021-12-30 21:11:00</td>\n",
-       "      <td>@roshanpateI ð¤£ $7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1.476740e+18</th>\n",
-       "      <td>2021-12-31 02:23:00</td>\n",
-       "      <td>@TheBabylonBee ð¤£</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2993 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                        Datetime  \\\n",
-       "Tweet Id                           \n",
-       "1.344810e+18 2021-01-01 00:58:00   \n",
-       "1.345210e+18 2021-02-01 03:20:00   \n",
-       "1.345340e+18 2021-02-01 12:23:00   \n",
-       "1.345380e+18 2021-02-01 14:51:00   \n",
-       "1.345380e+18 2021-02-01 14:59:00   \n",
-       "...                          ...   \n",
-       "1.476620e+18 2021-12-30 18:23:00   \n",
-       "1.476650e+18 2021-12-30 20:28:00   \n",
-       "1.476660e+18 2021-12-30 20:47:00   \n",
-       "1.476660e+18 2021-12-30 21:11:00   \n",
-       "1.476740e+18 2021-12-31 02:23:00   \n",
-       "\n",
-       "                                                           Text  \n",
-       "Tweet Id                                                         \n",
-       "1.344810e+18  @PPathole Dojo isnât needed, but will make s...  \n",
-       "1.345210e+18  @comma_ai Tesla Full Self-Driving will work at...  \n",
-       "1.345340e+18  @newscientist Um, we have giant fusion reactor...  \n",
-       "1.345380e+18  So proud of the Tesla team for achieving this ...  \n",
-       "1.345380e+18  @flcnhvy Tesla is responsible for 2/3 of all t...  \n",
-       "...                                                         ...  \n",
-       "1.476620e+18  @BLKMDL3 @mims Predicting macroeconomics is ch...  \n",
-       "1.476650e+18  @CSmithson80 @heydave7 @BLKMDL3 @mims This cha...  \n",
-       "1.476660e+18             @tesla_raj Many UI improvements coming  \n",
-       "1.476660e+18                               @roshanpateI ð¤£ $7  \n",
-       "1.476740e+18                                @TheBabylonBee ð¤£  \n",
-       "\n",
-       "[2993 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
