--- a/data_examine_1.ipynb
+++ b/data_examine_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "import pandas as pd\n",
     "import lookups\n",
     "import pandas_data_handler\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from transformers import pipeline"
    ]
   },
   {
@@ -31,103 +32,6 @@
     "tweets=pandas_data_handler.download_csv_to_dataframe(lookups.CsvUrlTweets.ELON_MUSK_TWEETS)\n",
     "doge=pd.read_csv(r\"C:\\Users\\Lenovo\\Desktop\\dogecoin_prices_2021.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>open_time</th>\n",
-       "      <th>price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>01/01/2021 00:00</td>\n",
-       "      <td>0.004672</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>01/01/2021 00:01</td>\n",
-       "      <td>0.004673</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>01/01/2021 00:02</td>\n",
-       "      <td>0.004686</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>01/01/2021 00:03</td>\n",
-       "      <td>0.004671</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>01/01/2021 00:04</td>\n",
-       "      <td>0.004676</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>01/01/2021 00:05</td>\n",
-       "      <td>0.004671</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>01/01/2021 00:06</td>\n",
-       "      <td>0.004670</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          open_time     price\n",
-       "0  01/01/2021 00:00  0.004672\n",
-       "1  01/01/2021 00:01  0.004673\n",
-       "2  01/01/2021 00:02  0.004686\n",
-       "3  01/01/2021 00:03  0.004671\n",
-       "4  01/01/2021 00:04  0.004676\n",
-       "5  01/01/2021 00:05  0.004671\n",
-       "6  01/01/2021 00:06  0.004670"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "doge.head(7)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
